force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/SPEN_SurveyScoreFeedback__c.object-meta.xml
<CustomObject>
    <description>CRMD-1232</description>
    <label>Survey Score &amp; Feedback</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Score &amp; Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>