force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_Account__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Score &amp; Feedbacks</relationshipLabel>
    <relationshipName>Survey_Score_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>