force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_AnonymousCustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AnonymousCustomerFeedback__c</fullName>
    <label>Anonymous Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>