force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Pre-Application, Case Transmission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Score &amp; Feedbacks</relationshipLabel>
    <relationshipName>Survey_Score_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>