force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>