force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_MTM2Feedback__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MTM2Feedback__c</fullName>
    <label>MTM 2 Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>