force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_MTM3Feedback__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MTM3Feedback__c</fullName>
    <label>MTM 3 Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>