force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_Stage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTM 1</fullName>
            </value>
            <value>
                <fullName>MTM 2</fullName>
            </value>
            <value>
                <fullName>MTM 3</fullName>
            </value>
            <value>
                <fullName>MTM 4</fullName>
            </value>
            <value>
                <fullName>MTM 5</fullName>
            </value>
            <value>
                <fullName>MTM 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>