force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_SurveyDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyDate__c</fullName>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>