force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_SurveyFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyFiscalYear__c</fullName>
    <label>Survey Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2025-2026</fullName>
            </value>
            <value>
                <fullName>2026-2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>