force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/fields/SPEN_SurveyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyType__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triggered Survey</fullName>
            </value>
            <value>
                <fullName>Annual Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>