force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/recordTypes/SPEN_PreApplication.recordType-meta.xml
<RecordType>
    <fullName>SPEN_PreApplication</fullName>
    <active>true</active>
    <label>Pre-Application</label>
</RecordType>