force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/recordTypes/SPEN_Transmission.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Transmission</fullName>
    <active>true</active>
    <label>Transmission</label>
</RecordType>