force-app/main/default/objects/SPEN_SurveyScoreFeedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Account__c</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_Stage__c</columns>
    <columns>SPEN_SurveyDate__c</columns>
    <columns>SPEN_MTM1SurveyScore__c</columns>
    <columns>SPEN_SurveyType__c</columns>
    <columns>SPEN_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>